Updated the web example to show the parallelism error

--- a/examples/web/index.html
+++ b/examples/web/index.html
@@ -26,7 +26,7 @@
         <button class="ma-md block" id="test-anchors-example">
             anchors-example.js
         </button>
-        
+
         <button class="ma-md block" id="test-ld-signatures-example">
             ld-signatures-example.js
         </button>
@@ -36,7 +36,7 @@
         </button>
 
         <button class="ma-md block" id="test-epcis">
-            anchor-epcis-events.js
+            verify
         </button>
 
         <h4 class="ma-md">Output:</h4>
